# TestingWebAssemblyCompilation

./: .gitignore  CMakeLists.txt  README.MD
main/: CMakeLists.txt  main.cpp
scripts/: clean_workspace.bat  cmake_config_toolchain.bat  emrun_executable.bat  get_emsdk.bat
